# a3c_mujoco

./: MUJOCO_LOG.TXT  Readme.md  mujoco_tut.py  test.ipynb
a3c_description/: CMakeLists.txt  package.xml  readme.md
a3c_description/config/: arm_controller.yaml  arms_trajectory_controller.yaml  gripper_controller.yaml
a3c_description/launch/: display.launch  display_with_gripper.launch  gazebo.launch  gazebo_with_gripper.launch  ros_control.launch  ros_control_traj.launch  test_2f_140_model.launch
a3c_description/meshes/: l0.stl  l3.stl  l4.stl
a3c_description/rviz/: basic_display.rviz
a3c_description/urdf/: base.urdf
a3c_description/worlds/: empty.world
a3c_description/xacro/: base_mounting.xacro  gripper_mounting.xacro  gripper_mounting_vac.xacro  robotiq_arg2f.xacro  robotiq_arg2f_140_model.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_transmission.xacro  ros_control.xacro  ros_control_traj.xacro  ros_control_vac.xacro
assets/: mujoco_a3c_joint_1_run_1.csv  mujoco_a3c_joint_1_run_4.csv  mujoco_a3c_joint_2_run_1.csv  mujoco_a3c_joint_3_run_1.csv  mujoco_a3c_joint_5_run_1.csv  plot.py
mujoco_model/: model.xml
mujoco_model/meshes/: l1.stl  l2.stl  l5.stl  l6.stl
mujoco_sim/: A2C_torch.py  actor_critic_continuous.py  circular_trajectory.py  controller.py  dqn.py  jointTrajectories.npy  mujoco_a3c_0_3-data.csv  mujoco_a3c_0_4-data.csv  mujoco_a3c_0_5-data.csv  multipid_train.py  reward.py  sim.py  sim_failsafe.py  sim_step.py  sim_v.py  test.py  train_v.py  train_v2.py
mujoco_sim/agent/: agent.py
mujoco_sim/benchmarks/: benchmark_reward.npy  benchmark_rr_ctrl0.npy  benchmark_rr_ctrl1.npy  benchmark_rr_ctrl2.npy  benchmark_rr_ctrl3.npy  benchmark_rr_ctrl4.npy  benchmark_rr_ctrl5.npy
